*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
  * (3/29/2011) Petr Miko
     # 188
       CHANGED: ADDED comments in source files related to EDEDB Perspective.

  * (3/28/2011) Petr Miko
     # 187
     
       CHANGED: few translation updates + extensions in JerpaLang.
       CHANGED: repaired bug, when user closed logindialog during logging in and clicked some buttons, wrong operations happened.
       CHANGED: repaired bug, when user selected files to delete - number is now equal to files physically present on local machine and downloading files cannot be deleted.
       CHANGED: repaired bug - downloading files cannot be analysed.  
  
  * (3/27/2011) Petr Miko
     # 186
     
       CHANGED: tables now in JTabbedPane in order to look through files online or the ones already downloaded.
       CHANGED: Many minor changes in order to watch changes with downloaded files.
       CHANGED: added few new translations in JerpaLang. 
  * (3/27/2011) Petr Miko
     # 185
     
       CHANGED: LoginDialog is now created only once and only shown/hidden on demand, plus the dialog is now modal.
       CHANGED: file opening for analysing is finished (without perspective switch). While file is opening, control elements are set inactive (added methods in Controller, EDEDBPerspective and Toolbar, which set elements enable state).
  
  * (3/25/2011) Petr Miko
     # 184
     
       CHANGED: JERPALang - extended of actionAnalyse texts in ededb,
       ADDED:   JERPA - ActionAnalyseSelected - selected file in Signal Perspective - not entirely done - really don't know how to "switch" perspectives after file is loaded (maybe making public mainMenu getter in JUIGLE, finding proper item and doing doClick? It would demand editing of JUIGLE).